# volte_testbed

./: .env.example  .gitignore  README.en.md  README.md  docker-compose.yml  pyproject.toml  setup_host.sh
infrastructure/dns/: dns_init.sh  e164.arpa  epc_zone  ims_zone
infrastructure/icscf/: icscf.cfg
infrastructure/mme/: mme.yaml  mme_init.sh
infrastructure/mysql/: Dockerfile
infrastructure/pcscf/: kamailio_pcscf.cfg  kamailio_pcscf.cfg.kemi_backup  pcscf.cfg  pcscf_init.sh
infrastructure/pcscf/route/: mo.cfg  mt.cfg  register.cfg
infrastructure/pyhss/: Dockerfile  default_ifc.xml
infrastructure/rtpengine/: Dockerfile
infrastructure/scscf/: kamailio_scscf.cfg  scscf.cfg
infrastructure/smf/: smf.conf  smf_init.sh
infrastructure/smsc/: Dockerfile  requirements.txt  sip.py  smsc.py  tpdu.py
infrastructure/smsc/tests/: conftest.py  test_sip.py  test_smsc.py  test_tpdu.py
infrastructure/srsenb/: enb.conf  rb.conf  rr.conf  sib.conf
infrastructure/srslte/: Dockerfile  srslte_init.sh
infrastructure/upf/: upf_init.sh
scripts/: provision_subscribers.py
