[project]
name = "volte-testbed"
version = "0.1.0"
description = "VoLTE testbed infrastructure (EPC + RAN + IMS docker stack)."
requires-python = ">=3.12"
authors = [
    { name = "Chae-JS", email = "jschae02@khu.ac.kr" }
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=8.0",
    "smsutil>=1.1.3",
]

[tool.uv]
package = false

[tool.poe.tasks]
enb-stop = {shell = "docker rm -f srsenb 2>/dev/null || true", help = "Stop srsENB container"}
enb-logs = {shell = "docker logs -f srsenb", help = "Tail srsENB container logs"}
epc-run = "docker compose up -d"
epc-stop = "docker compose down"
epc-status = "docker compose ps"
epc-logs = "docker compose logs -f"

[tool.poe.tasks.enb-run]
help = "Run srsENB (USRP B210) in Docker container"
shell = """
set -a
. ./.env
set +a
docker rm -f srsenb 2>/dev/null || true
docker run -d \
  --name srsenb \
  --privileged \
  --network docker_open5gs_default \
  --ip "$SRS_ENB_IP" \
  --env-file .env \
  -e COMPONENT_NAME=enb \
  -v "$(pwd)/infrastructure/srsenb:/etc/srsran" \
  -v "$(pwd)/infrastructure/srslte:/mnt/srslte" \
  -v /dev/bus/usb:/dev/bus/usb \
  docker_srslte:latest
echo "srsenb started. Run 'poe enb-logs' to tail logs."
"""

[tool.poe.tasks.epc-build]
help = "Build docker_open5gs, docker_kamailio base images and all services"
shell = """
echo '[1/3] Building docker_open5gs base image...'
docker build --force-rm -t docker_open5gs ./infrastructure/base
echo '[2/3] Building docker_kamailio base image...'
docker build --force-rm -t docker_kamailio ./infrastructure/ims_base
echo '[3/3] Building all services...'
docker compose build
echo 'Done'
"""

[tool.poe.tasks.enb-build]
help = "Build docker_srslte image (srsRAN_4G eNB) for enb-run"
shell = """
echo 'Building docker_srslte image (srsRAN_4G)...'
docker build --force-rm -t docker_srslte ./infrastructure/srslte
echo 'Done'
"""

[tool.poe.tasks.provision]
help = "Provision test subscribers to Open5GS HSS (MongoDB) and PyHSS (MySQL)"
cmd = "python scripts/provision_subscribers.py"

[tool.poe.tasks.setup-host]
help = "Setup Ubuntu host: kernel modules, sysctl, UE subnet routes, SDR udev, realtime, CPU governor"
cmd = "sudo ./setup_host.sh --all"

[tool.poe.tasks.smsc-test]
help = "Run SMSC unit tests"
cmd = "pytest infrastructure/smsc/tests -v"
